# hleahtor

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  config.status  configure  configure.ac
autom4te.cache/: output.1  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in  comics.cfg  hleahtor.cfg
src/: Makefile  Makefile.am  Makefile.in  checkUpdate.c  checkUpdate.h  configParser.c  configParser.h  hleahtor  hleahtor.c  hleahtor.h  hleahtorBrowser.c  hleahtorBrowser.h  hleahtorCommon.h  hleahtorNotify.c  hleahtorNotify.h
src/.deps/: hleahtor-checkUpdate.Po  hleahtor-configParser.Po  hleahtor-hleahtor.Po  hleahtor-hleahtorNotify.Po
